cabal-version:      3.0
name:               connexpay
version:            0.1
synopsis:           ConnexPay library for Haskell
homepage:           https://github.com/downtowntravel/connexpay
license:            NONE
author:             Nick
maintainer:         nick@typeable.io
copyright:          Typeable.io
category:           Web
build-type:         Simple
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules: Web.Connexpay
                     Web.Connexpay.Auth
                     Web.Connexpay.Data
                     Web.Connexpay.Init
                     Web.Connexpay.Payments
                     Web.Connexpay.Types
    default-extensions: DuplicateRecordFields
                        OverloadedLabels
                        OverloadedRecordDot
                        NoFieldSelectors
    -- other-modules:
    -- other-extensions:
    build-depends:    base >=4.14 && < 5.0
                 ,    aeson
                 ,    async
                 ,    bucks
                 ,    bytestring
                 ,    http-api-data
                 ,    http-client
                 ,    http-client-tls
                 ,    mtl
                 ,    req
                 ,    text
                 ,    uuid
    hs-source-dirs:   src
    default-language: GHC2021

executable connexpay-tool
    import:           warnings
    default-extensions: DuplicateRecordFields
                        OverloadedLabels
                        OverloadedRecordDot
                        NoFieldSelectors
    build-depends:    base >= 4.17
                 ,    aeson
                 ,    async
                 ,    bucks
                 ,    bytestring
                 ,    http-api-data
                 ,    http-client
                 ,    http-client-tls
                 ,    mtl
                 ,    req
                 ,    text
                 ,    uuid
                 ,    yaml
    hs-source-dirs:  src
    main-is:         Tool.hs
    default-language: GHC2021
