cabal-version:      3.0
name:               connexpay-optparse
version:            0.1
synopsis:           Optparse Applicative combinators for Connexpay
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
copyright:          Antorica LLC
category:           System
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Web.Connexpay.Cli
    build-depends:    base >=4.18 && < 5.0
                 ,    optparse-applicative
                 ,    text
                 ,    uuid
    hs-source-dirs:   src
    default-language: Haskell2010
