cabal-version:      3.0
name:               connexpay-optparse
description:        Parsing CLI arguments for connexpay
version:            0.1
synopsis:           Optparse Applicative combinators for Connexpay
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
copyright:          Antorica LLC
category:           System
build-type:         Simple


tested-with: GHC ==9.8.4 || ==9.6.6

common common
    default-extensions:
      BlockArguments
      DeriveAnyClass
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      MultiWayIf
      NoFieldSelectors
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      RecordWildCards
    default-language: GHC2021
    ghc-options:
      -Wall -Wmissing-deriving-strategies -Wprepositive-qualified-module
      -Wunused-packages -Wredundant-constraints

library
    import:           common
    exposed-modules:  Web.Connexpay.Cli
    build-depends:    base >=4.14 && < 5.0
                 ,    connexpay
                 ,    optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010
