cabal-version:      3.0
name:               connexpay
version:            0.1
synopsis:           ConnexPay library for Haskell
homepage:           https://github.com/typeable/connexpay
license:            NONE
author:             Nick
maintainer:         nick@typeable.io
copyright:          Typeable.io
category:           Web
build-type:         Simple


common common
    default-extensions:
      BlockArguments
      DeriveAnyClass
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      MultiWayIf
      NoFieldSelectors
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      RecordWildCards
    default-language: GHC2021
    ghc-options:
      -Wall -Wmissing-deriving-strategies -Wprepositive-qualified-module
      -Wunused-packages -Wredundant-constraints

library
    import:           common
    exposed-modules: Web.Connexpay
                     Web.Connexpay.Auth
                     Web.Connexpay.Data
                     Web.Connexpay.Init
                     Web.Connexpay.Payments
                     Web.Connexpay.Types
                     Web.Connexpay.Utils
    build-depends:    base >=4.14 && < 5.0
                 ,    aeson
                 ,    async
                 ,    bucks
                 ,    bytestring
                 ,    http-api-data
                 ,    http-client
                 ,    http-types
                 ,    mtl
                 ,    req
                 ,    text
                 ,    uuid
    hs-source-dirs:   src

executable connexpay-tool
    import:           common
    build-depends:    base >= 4.17
                 ,    aeson
                 ,    bucks
                 ,    connexpay
                 ,    http-client
                 ,    http-client-tls
                 ,    optparse-applicative
                 ,    text
                 ,    uuid
                 ,    yaml
    hs-source-dirs:  tool
    main-is:       Main.hs
