cabal-version:      3.0
name:               connexpay
description:        Interacting with Connexpay API
version:            0.1
synopsis:           ConnexPay library for Haskell
homepage:           https://github.com/typeable/connexpay
license:            MIT
author:             Nick
maintainer:         nick@typeable.io
copyright:          Typeable.io
category:           Web
build-type:         Simple


tested-with: GHC ==9.8.4 || ==9.6.6

common common
    default-extensions:
      BlockArguments
      DeriveAnyClass
      DerivingVia
      DuplicateRecordFields
      LambdaCase
      MultiWayIf
      NoFieldSelectors
      OverloadedLabels
      OverloadedRecordDot
      OverloadedStrings
      RecordWildCards
    default-language: GHC2021
    ghc-options:
      -Wall -Wmissing-deriving-strategies -Wprepositive-qualified-module
      -Wunused-packages -Wredundant-constraints

library
    import:           common
    exposed-modules:
      Web.Connexpay.Init
      Web.Connexpay.Payments
      Web.Connexpay.Types
    other-modules:
      Web.Connexpay.Auth
      Web.Connexpay.Http
      Web.Connexpay.Payments.Types
      Web.Connexpay.Utils
    build-depends:    base >=4.14 && < 5.0
                 ,    aeson
                 ,    async
                 ,    bytestring
                 ,    http-api-data
                 ,    http-client
                 ,    http-types
                 ,    safe-exceptions
                 ,    text
                 ,    uuid
    hs-source-dirs:   src

executable connexpay-tool
    import:           common
    build-depends:    base >= 4.17
                 ,    aeson
                 ,    connexpay
                 ,    http-client
                 ,    http-client-tls
                 ,    optparse-applicative
                 ,    text
                 ,    yaml
    hs-source-dirs:  tool
    main-is:       Main.hs
